--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,6 +1,16 @@
+/**
+* 
+* Natural Log 
+* @Copyright Shunta Furukawa 2014
+* 
+**/
+
+/* ----------------- General Tag Styles -------------------- */
+
 html{
   width: 100%;
   height: 100%;
+  font-size: 100%;
 }
 body {
   margin: 0;
@@ -8,6 +18,10 @@ body {
   width: 100%;
   height: 100%;
 }
+
+/* --------------------------------------------------------- */
+/* -------------------     Navaigation    ------------------ */
+/* --------------------------------------------------------- */
 
 nav {
   position: fixed;
