--- a/app/css/style.css
+++ b/app/css/style.css
@@ -10,13 +10,57 @@
 html{
   width: 100%;
   height: 100%;
-  font-size: 100%;
+  font-size: 12px;
 }
 body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
+}
+
+/* ----------------- Main / Sub Panel -------------------*/
+
+#SubPanel{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: #333;
+  z-index: 1;
+}
+#MainPanel{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-image: url("../images/background.png");
+  z-index: 2;
+  transition: left 0.3s ease-in-out;
+  box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.6);
+  box-sizing: border-box;
+  border: 1px solid rgba(255,255,255,.3);
+}
+#MainPanel.isOpened{
+  left: 16em;
+}
+#SubPanelCaller{
+  margin-left: 2rem;
+  cursor: pointer;
+}
+#SubPanelCaller:before{
+  content: "";
+  display: block;
+  width: 2rem;
+  height: 0.3rem;
+  position: absolute;
+  top: 0.8em;
+  left: 0.5em;
+  background: #FFF;
+  border-radius: 10px;
+  box-shadow: 0px 7px 0px #FFF, 0px -7px 0px #FFF, 0px 1px 1px #000, 0px 8px 1px #000, 0px -6px 1px #000;
 }
 
 /* --------------------------------------------------------- */
@@ -26,7 +70,6 @@ body {
 nav {
   position: fixed;
   height: 3em; /* 16px * 2 = 32px */
-  background: rgba(0,0,0,.1);
   width: 100%;
   z-index: 2;
 }
@@ -35,6 +78,8 @@ nav h1 {
   line-height: 2em;
   padding-left: 1em;
   float: left;
+  color: #FFF;
+  text-shadow: 0px 1px 1px #000;
 }
 nav > ul{
   float: right;
@@ -56,21 +101,73 @@ nav:after{
   padding-bottom: 3em;
   box-sizing: border-box;
   height: 100%;
+  position: relative;
 }
 
 .logbody{
-  position: relative;
+  position: absolute;
   margin-bottom: 3em;
   box-sizing: border-box;
-  height: 100%;
+  padding: 3em 0.5em 0em;
+  overflow: scroll;
+  bottom: -0.5em;
+  width: 100%;
+  max-height: 100%;
 }
 
 table{
-  position: absolute;
-  bottom: 0px;
+  position: relative;
+  background: #EEE;
+  width: 100%;
+  margin: 0;
+  border-radius: 4px;
+  box-sizing: border-box;
+  border: 1px solid #888;
+  box-shadow: inset 0px 1px 0px #FFF;
+}
+
+td.time{
+  width: 6em;
 }
 
 form{
+  display: box;
   position: fixed;
   bottom: 0px;
+  left: 0px;
+  box-sizing: border-box;
+  border: 1px solid #333;
+  width: 100%;
+  margin: 0;
+  padding: 0.1em 0.5em;
+  background: #666;
+  box-shadow: inset 0px 1px 0px #999;
+}
+
+form span#currentTime {
+  color: #FFF;
+  width: 7em;
+  font-weight: bold;
+  text-shadow: 0px -1px 0px #333;
+}
+
+form input[type="text"]{
+  padding: 0.5em;
+  background: #555;
+  border-radius: 2px;
+  border: 1px solid #333;
+  box-shadow: 0px 1px 0px #999;
+  color: #FFF;
+  width: auto;
+  text-shadow: 0px 1px 1px #333;
+}
+
+form input[type="submit"]{
+  padding: 0.5em;
+  background: #555;
+  border-radius: 2px;
+  border: 1px solid #333;
+  box-shadow: inset 0px 1px 0px #999;
+  color: #FFF;
+  text-shadow: 0px 1px 1px #333;
 }
