--- a/app/css/style.css
+++ b/app/css/style.css
@@ -132,10 +132,10 @@ td.time{
 
 form{
   display: box;
-  position: fixed;
-  bottom: 0px;
-  left: 0px;
-  box-sizing: border-box;
+  display: -webkit-box;
+  position: absolute;
+  bottom: -1px;
+  left: -1px;
   border: 1px solid #333;
   width: 100%;
   margin: 0;
@@ -145,10 +145,12 @@ form{
 }
 
 form span#currentTime {
+  display: block;
+  line-height: 2.5em;
   color: #FFF;
-  width: 7em;
   font-weight: bold;
   text-shadow: 0px -1px 0px #333;
+  padding-right: 0.5em;
 }
 
 form input[type="text"]{
@@ -158,11 +160,12 @@ form input[type="text"]{
   border: 1px solid #333;
   box-shadow: 0px 1px 0px #999;
   color: #FFF;
-  width: auto;
   text-shadow: 0px 1px 1px #333;
+  display: block;
 }
 
 form input[type="submit"]{
+  display: block;
   padding: 0.5em;
   background: #555;
   border-radius: 2px;
