--- a/app/css/style.css
+++ b/app/css/style.css
@@ -190,6 +190,7 @@ input[type="radio"]{
   -webkit-appearance:none;
   -o-appearance:none;
   display: block;
+  float: left;
 }
 #SubPanel ul{
   margin: 0;
@@ -210,8 +211,9 @@ input[type="radio"]{
   padding: 0.5em;
   color: #FFF;
   text-shadow: 0px 1px 1px #000;
+  width: 14em;
+  cursor: pointer;
 }
-
 .remove{
   position: absolute;
   display: block;
@@ -219,4 +221,20 @@ input[type="radio"]{
   height: 2em;
   border: none;
   right: 0.5em;
+  top: 0.5em;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+  color: #FFF;
+}
+.remove:after{
+  content: "×";
+}
+
+.download{
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+  color: #FFF;
 }
