--- a/app/css/style.css
+++ b/app/css/style.css
@@ -17,7 +17,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: 'Montserrat', sans-serif;
+  font-family: sans-serif;
 }
 
 /* ----------------- Main / Sub Panel -------------------*/
